force-app/main/default/objects/Case_link__c/Case_link__c.object-meta.xml
<CustomObject>
    <description>Created as asked by Audit and Finance to give tag, access and navigate to Case where PoPs and emails are tagged under.</description>
    <label>Case link</label>
    <nameField>
        <displayFormat>CL-{0}</displayFormat>
        <label>Case link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>