force-app/main/default/objects/Case_link__c/fields/LP_Waiver__c.field-meta.xml
<CustomField>
    <fullName>LP_Waiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LP Waiver</label>
    <referenceTo>LP_Waiver__c</referenceTo>
    <relationshipLabel>Case links</relationshipLabel>
    <relationshipName>Case_links</relationshipName>
    <type>Lookup</type>
</CustomField>