force-app/main/default/objects/Case_link__c/fields/Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>Payment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Request</label>
    <referenceTo>Payment_Request__c</referenceTo>
    <relationshipLabel>Case links</relationshipLabel>
    <relationshipName>Case_links</relationshipName>
    <type>Lookup</type>
</CustomField>