force-app/main/default/objects/Case_link__c/fields/PR_Case_Bookings_Match__c.field-meta.xml
<CustomField>
    <fullName>PR_Case_Bookings_Match__c</fullName>
    <formula>NOT(ISNULL(Case__r.Booking__c) || ISNULL(Payment_Request__r.Booking__c) || ISBLANK(Case__r.Booking__c) || ISBLANK(Payment_Request__r.Booking__c) || Case__r.Booking__c  &lt;&gt; Payment_Request__r.Booking__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR-Case Bookings Match?</label>
    <type>Checkbox</type>
</CustomField>