force-app/main/default/objects/Case_link__c/fields/Unit_Booking_on_Case__c.field-meta.xml
<CustomField>
    <fullName>Unit_Booking_on_Case__c</fullName>
    <formula>IF(ISNULL(Case__r.Booking__c) || ISBLANK(Case__r.Booking__c), &apos;No Booking Tagged on Case&apos;,Case__r.Booking__r.Name + &apos; - &apos; + Case__r.Booking__r.Unit__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit/Booking on Case</label>
    <type>Text</type>
</CustomField>