force-app/main/default/objects/Case_link__c/fields/Unit_Booking_on_PR__c.field-meta.xml
<CustomField>
    <fullName>Unit_Booking_on_PR__c</fullName>
    <formula>IF(ISNULL(Payment_Request__r.Unit__c) || ISBLANK(Payment_Request__r.Unit__c), &apos;No Unit Tagged on PR&apos;,Payment_Request__r.Unit__r.Booking__r.Name + &apos; - &apos; + Payment_Request__r.Unit__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit/Booking on PR</label>
    <type>Text</type>
</CustomField>