force-app/main/default/objects/Case_link__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Payment_Request__c</columns>
    <columns>PR_Case_Bookings_Match__c</columns>
    <columns>Unit_Booking_on_Case__c</columns>
    <columns>Unit_Booking_on_PR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>